--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,38 @@
+<!--
+Revisar componentes
+https://ionicframework.com/docs/components/#navigation
+-->
+
 <ion-header>
   <ion-navbar>
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+    <ion-title>
+      Principal
+    </ion-title>
   </ion-navbar>
 </ion-header>
-
-<ion-content padding>
-  <h3>Ionic Menu Starter</h3>
-
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+<ion-content padding id="page6">
+  <img src="assets/img/KCZTldjET9ewbyFfo2eF_girl.png" style="display:block;width:20%;height:auto;margin-left:auto;" />
+  <h1 id="principal-heading9" style="color:#000000;text-align:center;">
+    Hola ......
+  </h1>
+  <h1 id="principal-heading10" style="color:#000000;font-weight:lighter;">
+    Casos Frecuentes y Recientes
+  </h1>
+  <ion-list id="principal-list5">
+    <ion-item color="none" id="principal-list-item18">
+      <ion-icon name="ionic" item-left></ion-icon>
+      Item
+    </ion-item>
+    <ion-item color="none" id="principal-list-item19">
+      <ion-icon name="ionic" item-left></ion-icon>
+      Item
+    </ion-item>
+    <ion-item color="none" id="principal-list-item20">
+      <ion-icon name="ionic" item-left></ion-icon>
+      Item
+    </ion-item>
+  </ion-list>
 </ion-content>
